# mahoraga

./: .gitignore  CLAUDE.md  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
scripts/: install.sh
src/: app.rs  app.tsx  cli.tsx  config.rs  main.rs  types.rs  types.ts
src/commands/: mod.rs  uninstall.rs  update.rs
src/components/: CommandBar.tsx  CommandMenu.tsx  ConfigRequired.tsx  Feedback.tsx  Header.tsx  PromptInput.tsx  ScoreDisplay.tsx  Settings.tsx
src/hooks/: useAnalysis.ts  useConfig.ts
src/providers/: anthropic.rs  azure.rs  azure.ts  base.ts  index.ts  mod.rs  openai.rs
src/ui/: main_screen.rs  mod.rs  settings_screen.rs  theme.rs
src/ui/widgets/: command_menu.rs  feedback.rs  header.rs  mod.rs  prompt_input.rs  score_display.rs
src/utils/: config.ts  theme.ts
