[package]
name = "mahoraga"
version = "0.1.0"
edition = "2021"
description = "A terminal-based prompt validation and improvement tool"
authors = ["Mahoraga Contributors"]
license = "MIT"
repository = "https://github.com/example/mahoraga"
keywords = ["tui", "prompt", "llm", "validation"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

[[bin]]
name = "mahoraga"
path = "src/main.rs"
