[package]
name = "mahoraga"
version = "0.1.2"
edition = "2021"
description = "A terminal-based prompt validation and improvement tool"
authors = ["Mahoraga Contributors"]
license = "MIT"
repository = "https://github.com/wyMinLwin/mahoraga"
keywords = ["tui", "prompt", "llm", "validation"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
rand = "0.8"
flate2 = "1"
tar = "0.4"

[[bin]]
name = "mahoraga"
path = "src/main.rs"
